<resources>
    <string name="app_name">MyCap</string>

    <string name="classroom">Classroom</string>
    <string name="create">Create</string>
    <string name="en">EN</string>
    <string name="group">Group</string>
    <string name="id">ID</string>
    <string name="join">Join</string>
    <string name="live_transcibe">Live Transcibe</string>
    <string name="ok">Ok</string>
    <string name="room_code">Room Code</string>
    <string name="start">Start</string>
    <string name="warning">Warning</string>
    <string name="your_name_here">Your name here</string>
    <string name="peserta_conference">Peserta conference :</string>
</resources>
